--- a/example/Rakefile
+++ b/example/Rakefile
@@ -75,6 +75,9 @@ namespace :app do
     task :after do
       # explicit uninstall gem, ignore gem that was not installed
       AppDeploy.uninstall_gem(:gem => 'zzz')
+
+      # install passenger nginx module
+      sh(Gem.default_exec_format % 'passenger-install-nginx-module')
     end
   end
 
