[example/Rakefile] oops, it should have chdir back, or later would fail.

--- a/example/Rakefile
+++ b/example/Rakefile
@@ -17,6 +17,7 @@ rescue LoadError
   sh 'rake gem:package'
   sh "#{gem_int} --local pkg/app-deploy-*.gem"
 
+  Dir.chdir '..'
   Gem.refresh
   require 'app-deploy'
 end
