a way better task dependency management. see:
http://blogger.godfat.org/2009/12/app-deploy-released-3-ruby-rake-mutual.html

don't use ENV, use task argument.

--- a/example/Rakefile
+++ b/example/Rakefile
@@ -83,9 +83,9 @@ namespace :app do
     [:start, :stop, :restart, :reload].each{ |cmd|
       desc "#{cmd} nginx(passenger)"
       task cmd do
-        ENV['config'] = '/home/app/config/nginx.conf'
-        ENV['nginx']  = '/home/app/nginx/sbin/nginx'
-        Rake::Task["app:nginx:#{cmd}"].invoke
+        Rake::Task["app:nginx:#{cmd}"].invoke(
+          '/home/app/config/nginx.conf',
+          '/home/app/nginx/sbin/nginx')
       end
     }
   end
